feat: 과거 등록 경고 설정과 수강신청 엑셀 양식 개선
